--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,2 @@
 .DS_Store
+iOS_OTA_ESP32/iOS_OTA_ESP32_NimBLE.xcodeproj/project.xcworkspace/xcuserdata/alexmstahl.xcuserdatad/UserInterfaceState.xcuserstate
