- Implemented a new onChange handler in ContentView to start BLE scanning when dfuModeConfirmed is set to true. Previously scanning was started when the reboot timer finsihed, but now dfuModeCOnfirmed may happen before the timer exits. - Enhanced dfuModeConfirmed property in MIDIManager to stop DFU status polling and log a message when DFU mode is confirmed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 .DS_Store
 iOS_OTA_ESP32/iOS_OTA_ESP32_NimBLE.xcodeproj/project.xcworkspace/xcuserdata/alexmstahl.xcuserdatad/UserInterfaceState.xcuserstate
+iOS_OTA_ESP32/iOS_OTA_ESP32_NimBLE.xcodeproj/project.xcworkspace/xcuserdata/alexmstahl.xcuserdatad/UserInterfaceState.xcuserstate
+*.xcuserstate
