--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 iOS_OTA_ESP32/iOS_OTA_ESP32_NimBLE.xcodeproj/project.xcworkspace/xcuserdata/alexmstahl.xcuserdatad/UserInterfaceState.xcuserstate
 iOS_OTA_ESP32/iOS_OTA_ESP32_NimBLE.xcodeproj/project.xcworkspace/xcuserdata/alexmstahl.xcuserdatad/UserInterfaceState.xcuserstate
 *.xcuserstate
+*.xcuserstate
